<resources>
    <string name="app_name">Bridge</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bridge_logo">Bridge Logo</string>
    <string name="inspections_nremaining">Inspections\nRemaining</string>
    <string name="title_route_sheet">Route Sheet</string>
    <string name="route_sheet_text_search_inspection_number_hint">Insp. #</string>
    <string name="route_sheet_text_search_inspection_type_hint">Insp. Type</string>
    <string name="route_sheet_text_search_address_hint">Address</string>
    <string name="route_sheet_text_search_community_hint">Community</string>
    <string name="route_sheet_button_print_route_sheet_text">Print Route Sheet</string>
    <string name="route_sheet_button_order_route_sheet_text">Send Activity Log</string>
    <string name="inspection_details_text_builder_label">Builder:</string>
    <string name="inspection_details_text_superintendent_label">Superintendent:</string>
    <string name="inspection_details_text_notes_label">Notes:</string>
    <string name="inspection_details_button_inspect_text">Inspect</string>
    <string name="inspection_details_title">Inspection Summary</string>
    <string name="inspection_details_button_view_history_text">View Inspection History</string>
    <string name="inspection_details_button_transfer_inspection_text">Transfer Inspection</string>
    <string name="inspection_details_button_assign_trainee_text">Assign Trainee</string>
    <string name="inspection_details_button_edit_status_text">Edit Resolution</string>
    <string name="inspection_history_title">Inspection History</string>
    <string name="transfer_inspection_title">Transfer Inspection</string>
    <string name="transfer_inspection_button_transfer">Transfer</string>
    <string name="assign_trainee_title">Assign Trainee</string>
    <string name="edit_resolution_button_submit_text">Submit</string>
    <string name="defect_item_title">Defect Item</string>
    <string name="defect_item_text_location_hint">Location</string>
    <string name="defect_item_text_room_hint">Choose a room</string>
    <string name="defect_item_text_direction_hint">Direction</string>
    <string name="defect_item_text_fault_hint">Fault</string>
    <string name="save">Save</string>
    <string name="location_button_rear_left_corner_text">Rear Left Corner</string>
    <string name="location_button_rear_text">Rear</string>
    <string name="location_button_rear_right_corner_text">Rear Right Corner</string>
    <string name="location_button_left_rear_text">Left Rear</string>
    <string name="location_button_rear_left_text">Rear Left</string>
    <string name="location_button_rear_middle_text">Rear Middle</string>
    <string name="location_button_rear_right_text">Rear Right</string>
    <string name="location_button_right_rear_text">Right Rear</string>
    <string name="location_button_left_middle_text">Left Middle</string>
    <string name="location_button_left_text">Left</string>
    <string name="location_button_middle_text">Middle</string>
    <string name="location_button_right_text">Right</string>
    <string name="location_button_right_middle_text">Right Middle</string>
    <string name="location_button_left_front_text">Left Front</string>
    <string name="location_button_front_left_text">Front Left</string>
    <string name="location_button_front_middle_text">Front Middle</string>
    <string name="location_button_front_right_text">Front Right</string>
    <string name="location_button_right_front">Right Front</string>
    <string name="location_button_front_left_corner_text">Front Left Corner</string>
    <string name="location_button_front_text">Front</string>
    <string name="location_button_front_right_corner_text">Front Right Corner</string>
    <string name="location_button_exterior_text">Exterior</string>
    <string name="location_button_basement_text">Basement</string>
    <string name="location_button_main_text">Main</string>
    <string name="location_button_west_text">West</string>
    <string name="location_button_north_text">North</string>
    <string name="location_button_up_text">Up</string>
    <string name="location_button_third_text">Third</string>
    <string name="location_button_fourth_text">Fourth</string>
    <string name="location_button_south_text">South</string>
    <string name="location_button_east_text">East</string>
    <string name="SaveAndExit"><![CDATA[Save & Exit]]></string>
    <string name="title_activity_upload_progress">UploadProgress</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="pref_stay_logged_in">KeepMeLoggedIn</string>
    <string name="pref_inspector_id">InspectorId</string>
    <string name="location_button_garage_text">Garage</string>
    <string name="location_button_unit_text">Unit</string>
    <string name="title_activity_attachments">AttachmentsActivity</string>
    <string name="attachments_title">Attachments</string>
    <string name="lot_number_hint">Lot Number</string>
    <string name="title_activity_ekotrope_framed_floors">Ekotrope_FramedFloorsActivity</string>
    <string name="sample_text">Sample Text</string>
    <string name="CavityInsulationR">Cavity Insulation R</string>
    <string name="ContinuousInsulationR">Continuous Insulation R</string>
    <string name="StudSpacing">Stud Spacing</string>
    <string name="StudWidth">Stud Width</string>
    <string name="StudDepth">Stud Depth</string>
    <string name="NoTypeNameFound">No Type Name Found</string>
    <string name="type_name">Type Name</string>
    <string name="cavity_insulation_grade">Cavity Insulation Grade</string>
    <string name="cavity_insulation_r">Cavity Insulation R</string>
    <string name="continuous_insulation_r">Continuous Insulation R</string>
    <string name="stud_spacing">Stud Spacing</string>
    <string name="stud_width">Stud Width</string>
    <string name="stud_depth">Stud Depth</string>
    <string name="stud_material">Stud Material</string>
    <string name="Remove">Remove</string>
    <string name="WindowArea">Window Area</string>
    <string name="Orientation">Orientation</string>
    <string name="InstalledWallIndex">Installed Wall Index</string>
    <string name="OverhangDepth">Overhang Depth</string>
    <string name="DistanceOverhang">Distance Overhang</string>
    <string name="ToTop">To Top</string>
    <string name="ToBottom">To Bottom</string>
    <string name="SHGC">SHGC</string>
    <string name="UFactor">U-Factor</string>
    <string name="AdjacentShading">Adjacent Shading</string>
    <string name="Summer">Summer</string>
    <string name="Winter">Winter</string>
    <string name="remove_yes">Yes</string>
    <string name="NotFound">Not Found</string>
    <string name="DoorArea">Door Area</string>
    <string name="RadiantBarrier">Radiant Barrier?</string>
    <string name="UnderSlabInsulationR">Under Slab Insulation R</string>
    <string name="FullyInsulated">Fully Insulated?</string>
    <string name="UnderSlabInsulationWidth">Under Slab Insulation\nWidth</string>
    <string name="PerimeterInsulationDepth">Perimeter Insulation\nDepth</string>
    <string name="PerimeterInsulationR">Perimeter Insulation R</string>
    <string name="ThermalBreak">Thermal Break?</string>
    <string name="ThermalEnvelope">Thermal Envelope</string>
    <string name="FramedFloors">Framed Floors</string>
    <string name="AboveGradeWalls">Above Grade Walls</string>
    <string name="Windows">Windows</string>
    <string name="Doors">Doors</string>
    <string name="CeilingsRoof">Ceilings / Roof</string>
    <string name="Slabs">Slabs</string>
    <string name="RimJoists">Rim Joists</string>
    <string name="PlanId">Plan ID</string>
    <string name="ProjectId">Project ID</string>
    <string name="Mechanicals">Mechanicals</string>
    <string name="MechanicalEquipment">Mechanical Equipment</string>
    <string name="DistributionSystems">Distribution Systems</string>
    <string name="MechanicalVentilation">Mechanical Ventilation</string>
    <string name="LightingAndAppliances"><![CDATA[Lighting & Appliances]]></string>
    <string name="Lighting">Lighting</string>
    <string name="Refrigerator">Refrigerator</string>
    <string name="Dishwasher">Dishwasher</string>
    <string name="ClothesDryer">Clothes Dryer</string>
    <string name="ClothesWasher">Clothes Washer</string>
    <string name="RangeOven">Range Oven</string>
    <string name="Index">Index</string>
    <string name="Name">Name</string>
    <string name="IndexNotFound">00</string>
    <string name="Components">Components</string>
    <string name="Component">Component</string>
    <string name="ModelNumber">Model Number</string>
    <string name="Location">Location</string>
    <string name="HeatingLoad">% Heating Load</string>
    <string name="CoolingLoad">% Cooling Load</string>
    <string name="PercentHotWaterLoad">% Hot Water Load</string>
    <string name="AHRIRefNumber">AHRI Ref Number</string>
    <string name="AHRIRefFuelType">AHRI Ref Fuel Type</string>
    <string name="TestConducted">Test Conducted?</string>
    <string name="RefrigerantCharge">Refrigerant Charge</string>
    <string name="TestMethod">Test Method</string>
    <string name="MeteringDevice">Metering Device</string>
    <string name="DifferenceDTD">Difference DTD</string>
    <string name="DifferenceCTOA">Difference CTOA</string>
    <string name="WeightDeviation">Weight Deviation</string>
    <string name="NoModelNumberFound">No Model Number Found</string>
    <string name="LeakageToOutsideTested">Leakage to\nOutside Tested?</string>
    <string name="LeakageToOutside">Leakage to Outside</string>
    <string name="TotalLeakage">Total Leakage</string>
    <string name="TotalDuctLeakageTestCondition">Total Duct Leakage\nTest Condition</string>
    <string name="NumberOfReturns">Number of Returns</string>
    <string name="SqFeetServed">Sq. Feet Served</string>
    <string name="Ducts">Ducts</string>
    <string name="PercentSupplyArea">% Supply Area</string>
    <string name="PercentReturnArea">% Return Area</string>
    <string name="VentilationType">Ventilation Type</string>
    <string name="MeasuredFlowRate">Measured Flow Rate</string>
    <string name="FanWatts">Fan Watts</string>
    <string name="OperationalHoursPerDay">Operational Hours\nPer Day</string>
    <string name="PercentFluorescent">% Fluorescent</string>
    <string name="Interior">Interior</string>
    <string name="PercentLED">% LED</string>
    <string name="Exterior">Exterior</string>
    <string name="Garage">Garage</string>
    <string name="RefrigeratorConsumption">Refrigerator\nConsumption</string>
    <string name="Available">Available?</string>
    <string name="DefaultsType">Defaults Type</string>
    <string name="Size">Size</string>
    <string name="EfficiencyType">Efficiency Type</string>
    <string name="Efficiency">Efficiency</string>
    <string name="AnnualGasCost">Annual Gas Cost</string>
    <string name="GasRate">Gas Rate</string>
    <string name="ElectricRate">Electric Rate</string>
    <string name="CombinedEnergyFactor">Combined Energy\nFactor</string>
    <string name="UtilizationFactor">Utilization Factor</string>
    <string name="InductionRange">Induction Range?</string>
    <string name="ConvectionOven">Convection Oven?</string>
    <string name="FuelType">Fuel Type</string>
    <string name="Infiltration">Infiltration</string>
</resources>